fix to add more payload in complaint endpoint
