# indexer/packages/postgres/src/types/user-complaint-types.ts
@@ -4,6 +4,7 @@ type IsoString = string;
 
 export interface UserComplaintCreateObject {
   id: string,
+  walletAddress: string,
   message: string,
   email?: string,
   createdAt?: IsoString,
@@ -11,6 +12,7 @@ export interface UserComplaintCreateObject {
 
 export enum UserComplaintColumns {
   id = 'id',
+  walletAddress = 'walletAddress',
   message = 'message',
   email = 'email',
   createdAt = 'createdAt',
